# imms

./: .gitignore  AUTHORS  BuildingOnWindows.md  ContributingPatches.md  INSTALL  Makefile  PortingRequirements.md  ProjectHome.md  README  README.md  configure.ac  fetcher.cc  fetcher.h  imms.cc  imms.h  immsdb.h  immstool.cc  interface.c  md5digest.h  plugin.cc  regexx.cc  regexx.h  rules.mk  sqldb.cc  sqldb.h  strmanip.cc  strmanip.h  vars.mk.in  xidle.cc  xidle.h
analyzer/: analyzer.cc  analyzer.h  fftprovider.h  hanning.h  melfilter.h  mfcckeeper.cc  mfcckeeper.h  spectrum.h
autotag/: autotag.cc
branches/0.9.8/: immsdb.cc  levenshtein.h  md5.h  plugin.cc  sqldb.cc
branches/0.9.9/: configure.ac  imms.cc  plugin.cc  rules.mk
branches/1.0.1/: Makefile  imms.cc  immsdb.cc  immsdb.h  picker.cc  picker.h  plugin.cc  plugin.h  spectrum.cc  spectrum.h  sqldb.cc  strmanip.cc  strmanip.h  vars.mk.in
branches/2.1/immscore/: basicdb.h  immsdb.h
clients/: clientstub.h  clientstubbase.cc
clients/audacious/: audplugin.cc
clients/bmp/: bmpinterface.c
clients/xmms/: cplugin.h  rules.mk
data/: svm-similarity
imms/: .gitignore  AUTHORS  INSTALL  Makefile  README  autogen.sh  basicdb.cc  basicdb.h  client.h  comm.h  configure.ac  correlate.cc  correlate.h  dbuscore.cc  dbuscore.h  fetcher.cc  fetcher.h  imms.cc  imms.h  immsbase.h  immsd.cc  immsdb.cc  immsdb.h  immsremote.cc  immstool.cc  interface.c  picker.cc  picker.h  player.cc  player.h  playlist.cc  playlist.h  plugin.cc  plugin.h  plugin2.cc  rules.mk  server.cc  song.cc  song.h  songinfo.cc  (+14 more)
imms/analyzer/: analyzer.cc  analyzer.h  beatkeeper.cc  beatkeeper.h  distance.cc  distance.h  emd.c  emd.h  fftprovider.cc  fftprovider.h  hanning.h  melfilter.cc  melfilter.h  mfcckeeper.cc  mfcckeeper.h  soxprovider.h  spectrum.cc  spectrum.h
imms/autotag/: autotag.cc
imms/classifier/: classifier.cc  distance.cc  model.cc  model.h
imms/clients/: clientstub.h  clientstubbase.cc  clientstubbase.h  dbusclient.cc  dbusclient.h  glib2dbus.cc
imms/clients/audacious/: audplugin.cc  audplugindef.c  rules.mk
imms/clients/bmp/: bmpinterface.c  rules.mk
imms/clients/xmms/: cplugin.h  interface.c  plugin.cc  plugin2.cc  rules.mk
imms/immscore/: appname.h  basicdb.cc  basicdb.h  correlate.cc  correlate.h  dbuscore.cc  fetcher.cc  fetcher.h  flags.h  giosocket.h  imms.cc  imms.h  immsdb.cc  immsdb.h  immsutil.cc  immsutil.h  md5.c  md5digest.h  normal.h  picker.cc  picker.h  playlist.cc  playlist.h  serverstub.cc  serverstub.h  song.cc  song.h  songinfo.cc  songinfo.h  sqldb2.cc  sqldb2.h  sqlite++.cc  sqlite++.h  strmanip.h  utils.cc  utils.h  xidle.cc  xidle.h
imms/immsd/: dbusserver.h  immsd.cc  immsd.h  socketserver.cc  socketserver.h
imms/immsremote/: immsremote.cc  immsremote.glade
imms/model/: distance.cc  distance.h  model.cc  model.h
imms/players/: dbusclient.h
imms/players/xmms/: plugin2.cc
imms/utils/: immstool.cc  train.cc  train_data.cc  train_model.cc  training_data.cc
immscore/: appname.h  basicdb.h  correlate.cc  correlate.h  fetcher.cc  giosocket.h  imms.cc  immsdb.cc  immsutil.cc  immsutil.h  levenshtein.c  levenshtein.h  ltqnorm.h  md5.h  md5digest.h  picker.cc  picker.h  playlist.cc  playlist.h  regexx.cc  regexx.h  serverstub.cc  serverstub.h  song.h  songinfo.cc  songinfo.h  sqldb2.cc  sqldb2.h  sqlite++.cc  utils.cc  xidle.h
immsd/: immsd.cc  socketserver.cc
immsremote/: immsremote.cc
model/: distance.cc  distance.h  emd.h  model.cc  model.h
tags/2.1_last_branch/imms-clean/: Makefile  autogen.sh
tags/2.1_last_branch/immscore/: song.cc  sqldb2.cc  sqlite++.h  utils.h  xidle.cc
tags/2.1_last_merge/: configure.ac
tags/2.1_last_merge/clients/: clientstubbase.h
tags/2.1_last_merge/imms-clean/: configure.ac  vars.mk.in
tags/2.1_last_merge/immscore/: md5.c  picker.h
trunk/imms/: INSTALL  Makefile  basicdb.cc  basicdb.h  client.h  clientstub.cc  clientstub.h  cluster.cc  cluster.h  comm.cc  configure.ac  correlate.cc  dbuscore.cc  dbuscore.h  fetcher.cc  fetcher.h  imms.cc  imms.h  immsbase.h  immsd.cc  immsdb.cc  immsdb.h  immsremote.cc  immstool.cc  interface.c  picker.cc  picker.h  player.h  playlist.cc  playlist.h  plugin.cc  plugin.h  plugin2.cc  rules.mk  server.cc  server.h  song.cc  song.h  songinfo.cc  songinfo.h  (+12 more)
trunk/imms/analyzer/: analyzer.cc  analyzer.h  beatkeeper.cc  beatkeeper.h  distance.cc  fftprovider.cc  fftprovider.h  hanning.h  melfilter.cc  melfilter.h  mfcckeeper.cc  mfcckeeper.h  soxprovider.h  spectrum.cc  spectrum.h
trunk/imms/autotag/: autotag.cc
trunk/imms/classifier/: classifier.cc  distance.h  emd.c  kernel.cc  kernel.h  model.cc  model.h
trunk/imms/clients/: clientstub.h  clientstubbase.cc  clientstubbase.h  dbusclient.h  glib1dbus.cc
trunk/imms/clients/audacious/: audplugin.cc  audplugindef.c  rules.mk
trunk/imms/clients/bmp/: bmpinterface.c  bmpplugin.cc  rules.mk
trunk/imms/clients/xmms/: cplugin.h  interface.c  plugin.cc  plugin2.cc  rules.mk
trunk/imms/data/: svm-similarity
trunk/imms/immscore/: appname.h  basicdb.cc  basicdb.h  correlate.cc  correlate.h  dbuscore.cc  dbuscore.h  fetcher.cc  fetcher.h  flags.h  giosocket.h  imms.cc  imms.h  immsdb.cc  immsdb.h  immsutil.cc  immsutil.h  levenshtein.h  md5digest.h  normal.h  picker.cc  picker.h  playlist.cc  playlist.h  serverstub.cc  serverstub.h  song.cc  song.h  songinfo.cc  sqldb2.cc  sqldb2.h  sqlite++.cc  sqlite++.h  strmanip.cc  strmanip.h  utils.cc  utils.h  xidle.cc  xidle.h
trunk/imms/immsd/: dbusserver.cc  immsd.cc  immsd.h  socketserver.cc  socketserver.h
trunk/imms/immsremote/: immsremote.cc  immsremote.glade
trunk/imms/model/: distance.cc  distance.h  emd.c  emd.h  model.cc  model.h
trunk/imms/players/: clientstub.h  dbusclient.cc
trunk/imms/players/xmms/: interface.c  plugin.cc  plugin2.cc
trunk/imms/utils/: immstool.cc  train.cc  train_data.cc  train_model.cc  training_data.cc
utils/: immstool.cc  training_data.cc
wiki/: BuildingOnWindows.wiki  ContributingPatches.wiki  PatchesInQueue.wiki  PortingRequirements.wiki
(+19 files in other folders)
